src/test/deca/syntax/invalid/double_extends.deca
// Description:
// 	extends deux fois
// Result:
//  mismatched input 'extends' expecting OBRACE

class A extends B extends C{
    
}